# Vision

./: README.md
Config/: camera_calibration.xml  hu_moments_templates.csv
VisionCore/include/: EdgeDetection.h  VisionCore.h
VisionCore/src/: EdgeDetection.cpp  TrackingRecognition.cpp
VisionPlatform/: README.md
VisionPlatform/VisionCore/: CMakeLists.txt
VisionPlatform/VisionCore/include/: CalibrationManager.h  MeasurementModule.h  TrackingRecognition.h
VisionPlatform/VisionCore/src/: CalibrationManager.cpp  MeasurementModule.cpp  VisionCore.cpp
VisionUnity/Assets/VisionPlatform/Scripts/: CameraController.cs
VisionWPF/: MainWindow.xaml  MainWindow.xaml.cs  VisionBridge.cs  VisionWPF.csproj
